--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -2,6 +2,10 @@
     "name": "@monorepolyser/generator",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js"
-  }
-  
+    "main": "index.js",
+    "dependencies": {
+        "@actions/core": "^1.2.4",
+        "@actions/github": "^2.2.0",
+        "@actions/glob": "^0.1.0"
+    }
+}
