added build app script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:generator": "ncc build ./packages/generator/index.js"
+    "build:generator": "ncc build ./packages/generator/index.js",
+    "build:app": "yarn workspace @monorepolyser/app build"
   },
   "repository": {
     "type": "git",
