--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:generator": "ncc build ./packages/generator/index.js",
+    "build:action": "ncc build ./packages/github-action/index.js",
     "build:app": "yarn workspace @monorepolyser/app build"
   },
   "repository": {
