--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:generator": "node ./packages/generator/index.test.js",
     "build:action": "ncc build ./packages/github-action/index.js",
     "build:app": "yarn workspace @monorepolyser/app build"
   },
