--- a/action.yml
+++ b/action.yml
@@ -2,4 +2,4 @@ name: 'Graph generator'
 description: 'Generates the dependency graph for the monorepo'
 runs:
   using: 'node12'
-  main: 'dist/index.js'
+  main: 'packages/github-action/dist/index.js'
