--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build:app": "yarn workspace @monorepolyser/app build",
+    "start:app": "yarn workspace @monorepolyser/app start",
     "build:action": "yarn workspace @monorepolyser/github-action build",
     "test:generator": "yarn workspace @monorepolyser/generator test"
   },
