--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "find-root": "^1.1.0",
         "flatten": "^1.0.3",
-        "glob": "latest"
+        "glob": "^7.1.6"
     },
     "scripts": {
         "test": "node ./index.test.js"
