--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@lumx/icons": "^0.25.3",
+    "@lumx/react": "^0.25.3",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "vis-network": "^7.6.9"
+    "vis-data": "^6.6.1",
+    "vis-network": "^7.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,6 +31,10 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
+    "node-sass": "^4.14.1",
+    "typescript": "^3.9.6"
   }
 }
