--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,11 +6,12 @@
     "@lumx/icons": "^0.25.3",
     "@lumx/react": "^0.25.3",
     "classnames": "^2.2.6",
+    "cytoscape": "^3.15.2",
+    "cytoscape-avsdf": "^1.0.0",
+    "cytoscape-euler": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "vis-data": "^6.6.1",
-    "vis-network": "^7.8.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cytoscape": "^3.14.7",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
