--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,7 +8,10 @@
     "classnames": "^2.2.6",
     "cytoscape": "^3.15.2",
     "cytoscape-avsdf": "^1.0.0",
+    "cytoscape-cola": "^2.4.0",
+    "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-euler": "^1.2.2",
+    "cytoscape-spread": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
