--- a/packages/dependencies/package.json
+++ b/packages/dependencies/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@monorepolyser/generator",
+    "name": "@monorepolyser/dependencies",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
