--- a/packages/ga-dependencies/package.json
+++ b/packages/ga-dependencies/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@monorepolyser/github-action",
+    "name": "@monorepolyser/ga-dependencies",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -7,7 +7,7 @@
         "@actions/core": "^1.2.4",
         "@actions/github": "^2.2.0",
         "@actions/glob": "^0.1.0",
-        "@monorepolyser/generator": "1.0.0"
+        "@monorepolyser/dependencies": "1.0.0"
     },
     "scripts": {
         "build": "ncc build ./index.js"
