--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build:app": "yarn workspace @monorepolyser/app build",
-    "start:app": "yarn workspace @monorepolyser/app start",
-    "build:action": "yarn workspace @monorepolyser/ga-dependencies build",
-    "test:generator": "yarn workspace @monorepolyser/dependencies test"
+    "test:dependencies": "yarn workspace @monorepolyser/dependencies test"
   },
   "repository": {
     "type": "git",
