--- a/packages/ga-check-dependencies/package.json
+++ b/packages/ga-check-dependencies/package.json
@@ -10,6 +10,7 @@
         "@monorepolyser/dependencies": "1.0.0"
     },
     "scripts": {
-        "build": "ncc build ./index.js"
+        "build": "ncc build ./index.js",
+        "test": "node ./index.test.js"
     }
 }
