--- a/packages/ga-check-dependencies/package.json
+++ b/packages/ga-check-dependencies/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
+        "lodash": "1.2.3",
         "@actions/core": "^1.2.4",
         "@monorepolyser/dependencies": "1.0.0"
     },
