--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,5 @@ jobs:
         uses: actions/checkout@v2	
       - name: Check dependencies
         uses: ./packages/ga-check-dependencies # Uses an action in the root directory	
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
