--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,88 @@
 {
-    "extends": "react-app"
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "sourceType": "module",
+        "project": "./tsconfig.json",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "extends": [
+        "airbnb",
+        "airbnb/hooks",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
+        "plugin:prettier/recommended",
+        "prettier/react",
+        "prettier/@typescript-eslint"
+    ],
+    "plugins": [
+        "@typescript-eslint",
+        "prettier",
+        "eslint-plugin-prettier",
+        "react",
+        "jsx-a11y",
+        "import"
+    ],
+    "rules": {
+        "prettier/prettier": ["error", { "singleQuote": true, "printWidth": 120 }],
+        "react/jsx-filename-extension": [
+            2,
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx",
+                    ".ts",
+                    ".tsx"
+                ]
+            }
+        ],
+        "no-plusplus": [
+            "error",
+            {
+                "allowForLoopAfterthoughts": true
+            }
+        ],
+        "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"],
+        "import/extensions": [
+            "error",
+            "never",
+            {
+                "svg": "always",
+                "json": "always"
+            }
+        ],
+        "import/no-unresolved": "off",
+        "react/prop-types": "off",
+        "react/jsx-props-no-spreading": "off",
+        "@typescript-eslint/no-var-requires": "off",
+        "import/prefer-default-export": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/explicit-function-return-type": "off"
+    },
+    "env": {
+        "jest": true,
+        "browser": true,
+        "es6": true
+    },
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [
+                    ".js",
+                    ".ts",
+                    ".jsx",
+                    ".tsx",
+                    ".json"
+                ]
+            }
+        },
+        "import/extensions": [
+            ".js",
+            ".ts",
+            ".mjs",
+            ".jsx",
+            ".tsx"
+        ]
+    }
 }
