--- a/packages/ga-check-dependencies/package.json
+++ b/packages/ga-check-dependencies/package.json
@@ -9,7 +9,7 @@
         "@monorepolyser/dependencies": "1.0.0"
     },
     "scripts": {
-        "build": "ncc build ./index.js",
-        "test": "node ./index.test.js"
+        "build": "ncc build ./index.ts",
+        "test": "node ./index.test.ts"
     }
 }
