create main ga entrypoint

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,12 @@ jobs:
   check-dependencies:	
     runs-on: ubuntu-latest	
     name: Check dependencies integrity	
-    steps:	
-      # To use this repository's private action, you must check out the repository	
+    steps:		
       - name: Checkout	
         uses: actions/checkout@v2	
       - name: Check dependencies
-        uses: ./packages/ga-check-dependencies # Uses an action in the root directory	
+        uses: ./packages/ga-monorepolyser
+        with:
+          check-dependencies: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
