--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test:dependencies": "yarn workspace @monorepolyser/dependencies test",
     "test:ga-check-dependencies": "yarn workspace @monorepolyser/ga-check-dependencies test",
-    "build:ga-check-dependencies": "yarn workspace @monorepolyser/ga-check-dependencies build"
+    "build": "yarn workspace @monorepolyser/ga-monorepolyser build"
   },
   "repository": {
     "type": "git",
