--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,9 @@
-description: 'Generates the dependency graph for the monorepo'
+description: 'Monorepolyser'
+inputs:
+  check-dependencies:
+    description: 'Whether the github action will check the monorepo dependencies integrity or not'
+    required: false
+    default: false
 runs:
   using: 'node12'
-  main: 'packages/ga-check-dependencies/dist/index.js' 
+  main: 'packages/ga-monorepolyser/dist/index.js' 
