--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     },
     "include": [
       "packages/ga-check-dependencies",
+      "packages/ga-monorepolyser",
       "packages/dependencies"
     ]
   }
