added missing action.yml

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
-description: 'Monorepolyser'
+name: 'Monorepolyser'
+description: 'Awesome set of tools and validators for your yarn monorepo'
 inputs:
   check-dependencies:
     description: 'Whether the github action will check the monorepo dependencies integrity or not'
