--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout	
         uses: actions/checkout@v2	
       - name: Check dependencies
-        uses: .
+        uses: ./
         with:
           check-dependencies: true
         env:
