--- a/packages/ga-check-dependencies/package.json
+++ b/packages/ga-check-dependencies/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "@actions/github": "^2.1.0",
         "@actions/core": "^1.2.4",
-        "@monorepolyser/dependencies": "1.0.0"
+        "@monorepolyser/dependencies": "1.0.0",
+        "@monorepolyser/ga-utils": "1.0.0"
     },
     "scripts": {
         "build": "ncc build ./index.ts"
