--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,9 +25,7 @@ jobs:
           key: ${{ runner.os }}-dependency-hash-${{ steps.cache-prep.outputs.hash }}
       - name: "Install dependencies"
         if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          yarn remove -W toolkit-client --ignore-scripts # skip private dependency
-          yarn install --frozen-lockfile --ignore-optional --ignore-scripts
+        run: yarn install --frozen-lockfile --ignore-optional --ignore-scripts
   test:
     runs-on: ubuntu-latest
     needs: install-dependencies
@@ -49,5 +47,4 @@ jobs:
       - name: "Run tests"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          yarn test
+        run: yarn test
