--- a/.github/workflows/monorepolyser.yml
+++ b/.github/workflows/monorepolyser.yml
@@ -15,5 +15,6 @@ jobs:
         uses: ./
         with:
           check-dependencies: true
+          only-warn: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
