--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: 'Whether the main package json of the repository should be considered for the integrity check or not'
     required: false
     default: true
+  only-warn:
+    description: 'Whether this action should only throw a warning or an error'
+    required: false
+    default: false
 runs:
   using: 'node12'
   main: 'packages/ga-monorepolyser/dist/index.js' 
