--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "include": [
       "packages/ga-check-dependencies",
       "packages/ga-monorepolyser",
+      "packages/ga-impact-analysis",
       "packages/ga-utils",
       "packages/dependencies"
     ]
