--- a/packages/ga-monorepolyser/package.json
+++ b/packages/ga-monorepolyser/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@actions/core": "^1.2.6",
         "@monorepolyser/ga-check-dependencies": "1.0.0",
+        "@monorepolyser/dependencies": "1.0.0",
         "@monorepolyser/ga-impact-analysis": "1.0.0"
     },
     "scripts": {
