feat(impact-anaylsis): add comment to PR

--- a/.github/workflows/monorepolyser.yml
+++ b/.github/workflows/monorepolyser.yml
@@ -16,5 +16,6 @@ jobs:
         with:
           check-dependencies: true
           impact-analysis: true
+          high-impact-threshold: 50
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
