--- a/packages/ga-impact-analysis/package.json
+++ b/packages/ga-impact-analysis/package.json
@@ -5,6 +5,7 @@
     "main": "index.ts",
     "dependencies": {
         "@actions/github": "^2.1.0",
-        "@monorepolyser/dependencies": "1.0.0"
+        "@monorepolyser/dependencies": "1.0.0",
+        "@monorepolyser/ga-utils": "1.0.0"
     }
 }
