feat(impact-analysis): add labels to PR

--- a/.github/workflows/monorepolyser.yml
+++ b/.github/workflows/monorepolyser.yml
@@ -17,5 +17,7 @@ jobs:
           check-dependencies: true
           impact-analysis: true
           high-impact-threshold: 50
+          on-high-impact: 'comment,add-labels'
+          high-impact-labels: 'high-impact'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
