--- a/.github/workflows/monorepolyser.yml
+++ b/.github/workflows/monorepolyser.yml
@@ -15,6 +15,17 @@ jobs:
         uses: ./
         with:
           check-dependencies: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  impact-analysis:	
+    runs-on: ubuntu-latest	
+    name: Check impact analysis	
+    steps:		
+      - name: Checkout	
+        uses: actions/checkout@v2	
+      - name: Check impact
+        uses: ./
+        with:
           impact-analysis: true
           high-impact-threshold: 50
           on-high-impact: 'comment,add-labels'
