--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build": "yarn workspace @monorepolyser/ga-monorepolyser build",
+    "start:analyser": "yarn workspace @monorepolyser/analyser start",
     "test": "jest --coverage"
   },
   "repository": {
@@ -13,7 +14,7 @@
     "url": "git+https://github.com/juanigalan91/monorepolyser.git"
   },
   "engines": {
-    "node": "^13.7.0",
+    "node": "^14.16.0",
     "yarn": "^1.16.0"
   },
   "keywords": [],
@@ -27,10 +28,14 @@
     "packages/**/*"
   ],
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
-    "eslint": "^6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.0",
@@ -38,7 +43,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "jest": "^26.6.3",
+    "jest": "^26.6.0",
+    "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
