--- a/.github/workflows/reviewed_and_tested.yml
+++ b/.github/workflows/reviewed_and_tested.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2.3.4
     - name: "Reviewed and tested"
-      uses: ./ga-dispatcher
+      uses: ./packages/ga-dispatcher
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REF: ${{ github.event.pull_request.head.ref }}
