chore(test): test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,7 @@
 name: Unit testing
 
-on:
-  repository_dispatch:
-    types: [trigger_ci]
+on: 
+  workflow_dispatch:
   
 jobs:
   install-dependencies:
