--- a/.github/workflows/reviewed_and_tested.yml
+++ b/.github/workflows/reviewed_and_tested.yml
@@ -12,8 +12,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
-    - name: "Reviewed and tested"
-      uses: ./packages/ga-dispatcher
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REF: ${{ github.event.pull_request.head.ref }}
+    - name: Invoke workflow
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: Unit testing
+          token: ${{ secrets.WORKFLOW_RUN }}
+          ref: ${{ github.event.pull_request.head.ref }}
