Revert "chore(ci): repository dispatch"
This reverts commit 92703f2e1549af1fec7be12bebab4d579ed7ac2c.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,8 @@
 name: Unit testing
 
 on:
-  repository_dispatch:
-    types: [trigger_ci]
+  pull_request:
+    types: [opened, synchronize, reopened]
   
 jobs:
   install-dependencies:
