--- a/packages/dependencies/package.json
+++ b/packages/dependencies/package.json
@@ -4,11 +4,13 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
-        "@types/glob": "^7.1.3",
         "find-root": "^1.1.0",
         "flatten": "^1.0.3",
         "glob": "^7.1.6",
         "package-json-types": "^1.0.2"
+    },
+    "devDependencies": {
+        "@types/glob": "^7.1.3"
     },
     "scripts": {
         "test": "node ./index.test.js"
