chore(ignore-deps): ignore certain deps by id

--- a/.github/workflows/monorepolyser.yml
+++ b/.github/workflows/monorepolyser.yml
@@ -15,6 +15,7 @@ jobs:
         uses: ./
         with:
           check-dependencies: true
+          dependencies-to-ignore: '@actions/github'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   impact-analysis:	
